all done (without hover)

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -4,6 +4,9 @@
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: $c-darkText;
   scroll-behavior: smooth;
 }
 
