--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,4 +1,4 @@
-.gallary {
+.gallery {
   padding-top: 316px;
   display: flex;
   flex-direction: column;
@@ -45,14 +45,14 @@
 
     @include MediumScreen {
       height: 543px;
-      width: $galaryWidthTab;
-      margin-right: $galaryGapTab;
+      width: $galleryWidthTab;
+      margin-right: $galleryGapTab;
     }
 
     @include MobileScreen {
       height: 410px;
-      width: $galaryWidthMob;
-      margin-right: $galaryGapMob;
+      width: $galleryWidthMob;
+      margin-right: $galleryGapMob;
     }
   }
 
