--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import "events";
 @import "description";
 @import "lecture";
-@import "gallary";
+@import "gallery";
 @import "slider";
 @import "subscription";
+@import "footer";
