--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -3,10 +3,13 @@
     display: grid;
     grid-template-columns: repeat(8, auto);
     gap: 50px;
+    font-family: Oswald, sans-serif ;
+    font-size: 14px;
+    line-height: 14px;
     white-space: nowrap;
 
     @include MediumScreen {
-      gap: 40px;
+      gap: 30px;
     }
 
     @include MobileScreen {
