--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -25,25 +25,25 @@
 
   }
 
-  &__input--1:checked ~ .gallary__wrapper .gallary__picture {
+  &__input--1:checked ~ .gallery__wrapper .gallery__picture {
     left: 0;
   }
 
-  &__input--2:checked ~ .gallary__wrapper .gallary__picture {
-    left: -($galaryWidthTab + $galaryGapTab);
+  &__input--2:checked ~ .gallery__wrapper .gallery__picture {
+    left: -($galleryWidthTab + $galleryGapTab);
     @include  MobileScreen {
-      left: -($galaryWidthMob + $galaryGapMob);
+      left: -($galleryWidthMob + $galleryGapMob);
     }
   }
 
-  &__input--3:checked ~ .gallary__wrapper .gallary__picture {
-    left: -($galaryWidthTab + $galaryGapTab) * 2;
+  &__input--3:checked ~ .gallery__wrapper .gallery__picture {
+    left: -($galleryWidthTab + $galleryGapTab) * 2;
     @include  MobileScreen {
-      left: -($galaryWidthMob + $galaryGapMob) * 2;
+      left: -($galleryWidthMob + $galleryGapMob) * 2;
     }
   }
 
-  &__input--4:checked ~ .gallary__wrapper .gallary__picture {
+  &__input--4:checked ~ .gallery__wrapper .gallery__picture {
     left: 0;
   }
 
