--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -28,6 +28,18 @@
   }
 }
 
+@mixin MinMobileScreen {
+  @media (min-width: 760px) {
+    @content;
+  }
+}
+
+@mixin MinMediumScreen {
+  @media (min-width: 1279px) {
+    @content;
+  }
+}
+
 @mixin square-position {
   left: 25px;
   bottom: calc((#{$squareEvetsLine-height} / 2 - #{$squareEvetsHeight}));
