--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -21,7 +21,7 @@ $squareEvetsLine-height: 36px;
 $squareEvetsLine-heightMob: 28px;
 $lectureCardWidth: 570px;
 $lectureCardWidthMob: 278px;
-$galaryWidthTab: 340px;
-$galaryGapTab: 20px;
-$galaryWidthMob: 280px;
-$galaryGapMob: 16px;
+$galleryWidthTab: 340px;
+$galleryGapTab: 20px;
+$galleryWidthMob: 280px;
+$galleryGapMob: 16px;
