--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -17,3 +17,16 @@
   background-image: url("../images/Vector1.png");
 
 }
+
+.button--foot {
+  background-color: transparent;
+  background-image: unset ;
+  border: 1px solid $c-textDate;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 100;
+  color: $c-textDate;
+  
+}
