light bugs were fixed

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -17,6 +17,21 @@
     align-items: center;
   }
 
+  &__link {
+    color: #000;
+    &:hover {
+      color: #444;
+    }
+
+    &:active {
+      color: #333;
+    }
+
+    &:visited {
+      color: #555;
+    }
+  }
+
   &__socials {
     width: 17.8vw;
     display: flex;
