--- a/src/styles/header/nav.scss
+++ b/src/styles/header/nav.scss
@@ -31,7 +31,17 @@
   }
 
   &__menu-link {
+
     color: #000;
+
+    &:hover {
+      color: #444;
+    }
+    
+    &:active {
+      color: #333;
+    }
+
     font-size: 4.37vw;
 
     @media screen and (min-width: 768px) {
