--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@
 @import "./announcements/caption.scss";
 
 @import "./galery/galery.scss";
+@import "./galery/mobile-button.scss";
 
 @import "./subscription/subscription.scss";
 
