--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -36,8 +36,8 @@
   &__info {
     display: flex;
     max-width: $column * 7;
-    padding-right: $gridGap;
-    padding-bottom: $gridGap;
+    margin-right: $gridGap;
+    margin-bottom: $gridGap;
   }
 
   &__date {
