toggler was fixed

--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -12,10 +12,14 @@
   position: relative;
   padding-bottom: 0;
 
-  &__switch {
+  &__label-for-toggler {
+    height: 42px;
+    width: 42px;
     position: absolute;
-    top: 33px - 14px;
-    left: 23px - 7px;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    cursor: pointer;
   }
 
   &__nav {
