--- a/src/styles/header/toggler.scss
+++ b/src/styles/header/toggler.scss
@@ -6,9 +6,16 @@
 }
 
 .toggler {
+  transform: translate(-20%, -200%);
   width: 18px;
   z-index: 2;
   height: 1.3px;
+  @media screen and (min-width: 768px) {
+    height: 2px;
+  }
+  @media screen and (min-width: 1280px) {
+    height: 1.3px;
+  }
   position: absolute;
   top: 25px;
   left: 15px;
@@ -32,6 +39,7 @@
   }
   &--open {
     transform: rotate(45deg);
+    height: 1.3px;
 
   }
   &--open::before {
