--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -47,13 +47,12 @@
   }
 
   &__content {
-    //display: none;
+    opacity: 0;
     height: 720px;
-    position: fixed;
+    position: absolute;
     top: 80px;
-    right: -110vw;
     width: 100%;
-    transition: all 0.5s;
+    //transition: all 0.3s;
     z-index: 5;
     background: $colorMainGreen url("../images/header-pic2.png") no-repeat 100% 100%;
 
@@ -70,7 +69,8 @@
   }
 
   &__content--open {
-    right: calc(-50vw + 620px);
+    opacity: 1;
+    right: 0;
     transition: all 0.5s;
   }
 
