navbar was fixed

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -120,6 +120,14 @@
     text-align: left;
     color: #0f0e08;
 
+    &:hover {
+      color: #444;
+    }
+
+    &:active {
+      color: #333;
+    }
+
     padding: 2.7vw 5vw 2.7vw 0;
   }
 }
