--- a/src/styles/header/nav.scss
+++ b/src/styles/header/nav.scss
@@ -31,18 +31,17 @@
   }
 
   &__menu-link {
+    font-size: 4.37vw;
 
     color: #000;
 
     &:hover {
-      color: #444;
-    }
-    
-    &:active {
-      color: #333;
+      color: #414141;
     }
 
-    font-size: 4.37vw;
+    &:active {
+      color: #313131;
+    }
 
     @media screen and (min-width: 768px) {
       font-size: 2.37vw;
@@ -51,5 +50,108 @@
       font-size: 45px;
     }
 
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    &__menu {
+      position: absolute;
+      display: none;
+      &--has-popup {
+        display: block;
+        position: absolute;
+        height: 200px;
+      }
+    }
+
+    &__menu-list {
+      height: 80px;
+      //width: 1920px;
+      transform: translate(12px, 0);
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
+    &__menu-link {
+      font-size: 1.46vw; //28px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    &__menu {
+      position: absolute;
+
+      top: -200px;
+      transition-duration: 1s;
+      &--has-popup {
+        display: block;
+        position: absolute;
+        height: 200px;
+        transform: translate(0, 200px);
+        transition-duration: 1s;
+      }
+    }
+
+    &__menu-list {
+      height: 80px;
+      transform: translate(12px, 0);
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
+    &__menu-link {
+      font-size: 1.46vw;
+    }
+  }
+}
+
+@media screen and (min-width: 1650px) {
+  .header {
+    &__menu {
+      position: absolute;
+      display: none;
+      &--has-popup {
+        display: block;
+        position: absolute;
+        height: 200px;
+      }
+    }
+
+    &__menu-list {
+      width: 1650px;
+    }
+
+    &__menu-link {
+      font-size: 28px;
+    }
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .header {
+    &__menu {
+      position: absolute;
+      display: none;
+      &--has-popup {
+        display: block;
+        position: absolute;
+        height: 200px;
+      }
+    }
+
+    &__menu-list {
+      width: 1920px;
+    }
+
+    &__menu-link {
+      font-size: 28px;
+    }
   }
 }
