--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -275,7 +275,7 @@
     min-height: 0;
 
     margin: 0 auto;
-    margin-right: 5.5vw;
+    //margin-right: 5.5vw;
     height: 300px + 183px;
     background: #fff;
     background-image: url(/images/header/muz.png);
@@ -300,8 +300,11 @@
     }
 
     &__page-name {
+      position: absolute;
+      top: 135px;
+      right: 403px;
       grid-row: 1/2;
-      padding-left: 34px;
+      padding: 0;
 
       align-self: auto;
       height: auto;
@@ -313,6 +316,8 @@
       line-height: 55px;
       text-align: left;
       &--transparent {
+        color: transparent;
+        -webkit-text-stroke: 1.1px #000;
         font-family: Ubuntu, sans-serif;
         font-size: 55px;
         font-style: normal;
@@ -364,8 +369,11 @@
     }
 
     &__page-name {
+      position: absolute;
+      top: 235px;
+      right: 632px;
       grid-row: 1/2;
-      padding-left: 0;
+      padding: 0;
 
       font-family: Montserrat, sans-serif;
       font-size: 72px;
@@ -442,6 +450,10 @@
     }
 
     &__page-name {
+      position: absolute;
+      top: 235px;
+      right: 1115px;
+
       grid-row: 1/2;
       padding-left: 0;
 
