mobile version added

--- a/src/styles/event-card.scss
+++ b/src/styles/event-card.scss
@@ -85,3 +85,26 @@
     object-fit: cover;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .event-card {
+    grid-template-columns: repeat(2, 1fr);
+    
+    &__image {
+      height: 210px;
+      width: 280px;
+
+      & img {
+        object-fit: cover;
+      }
+    }
+
+    &__description {
+      width: 280px;
+
+      &-name {
+        font-size: 28px;
+      }
+    }
+  }    
+}
