--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,28 +11,7 @@
 @import "subscription";
 @import "footer";
 
-// DOESN'T WORK:
 html {
   font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
 }
-
-// .wrapper {
-//   min-height: 100%;
-//   display: grid;
-//   grid-template: minmax(auto, 655px) 1fr minmax(auto, 457px) / 1fr;
-//   grid-template-areas: "header" "main" "footer";
-// }
-
-// .header {
-//   grid-area: header;
-//   padding-left: 40px;
-// }
-
-// .main {
-//   grid-area: main;
-//   margin: 0 40px;
-// }
-
-// .footer {
-//   grid-area: footer;
-// }
