--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -21,6 +21,7 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     line-height: 100%;
+    text-align: center;
   }
 
   &__form {
@@ -45,5 +46,28 @@
     background: url(../images/black_arrow.svg) no-repeat center;
     background-color: #f14a27;
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .subscription {
+    height: 386px;
+
+    &__input {
+      width: 233px;
+      height: 50px;
+      margin-right: 0;
+      background-color: #fff;
+      font-family: "Montserrat", sans-serif;
+      color: #687480;
+    }
+  
+    &__button {
+      height: 50px;
+      width: 50px;
+      background: url(../images/black_arrow.svg) no-repeat center;
+      background-color: #f14a27;
+      cursor: pointer;
+    }
   }
 }
