--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -15,10 +15,16 @@
   }
 }
 
-// .header__name-transparent {
-//   -webkit-text-stroke: unset;
-//   -webkit-text-fill-color: unset;
-// }
+@media screen and (max-width: 600px) {
+  %h1 {
+    font-size: 45px;
+  }
+
+  .header__name-transparent {
+    -webkit-text-stroke: unset;
+    -webkit-text-fill-color: unset;
+  }
+}
 
 %h2 {
   font-family: "Montserrat", sans-serif;
@@ -26,4 +32,10 @@
   font-weight: 700;
   line-height: 100%;
   color: #0f0e08;
+}
+
+@media screen and (max-width: 600px) {
+  %h2 {
+    font-size: 36px;
+  }
 }
