--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -79,3 +79,45 @@
     }
   }
 }
+
+@media screen and (max-width: 600px) {
+  .events {
+    max-width: 280px;
+
+    &__title {
+      padding-bottom: 40px;
+      text-align: center;
+    }
+
+    &__event-card-1 {
+      margin: 0 0 50px;
+
+      &--left-image {
+        grid-row: 1;
+        grid-column: 1 / 3;
+        margin-bottom: 30px;
+      }
+
+      &--right-desc {
+        grid-row-start: 2;
+        grid-column: 1 / 3;
+        
+      }
+    }
+
+    &__event-card-2 {
+      margin: 0 0 50px;
+
+      &--right-image {
+        grid-row-start: 3;
+        grid-column: 1 / 3;
+        margin-bottom: 30px;
+      }
+
+      &--left-desc {
+        grid-row-start: 4;
+        grid-column: 1 / 3;
+      }
+    }
+  }
+}
