--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,6 +11,10 @@
   font-weight: 400;
   color: #0f0e08;
 
+  &__arrow-up {
+    display: none;
+  }
+
   &__logo {
     grid-column-start: 1;
     grid-row-start: 2;
@@ -142,6 +146,62 @@
     &__copyright {
       grid-column: 1 / 3;
       grid-row-start: 3;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    max-width: 320px;
+    margin: 50px auto;
+
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 4fr 50px 2fr 1fr;
+
+    &__contacts {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
+    &__nav-site {
+      grid-column: 1;
+      grid-row: 4;
+    }
+
+    &__nav-general {
+      grid-column: 2;
+      grid-row: 4;
+    }
+
+    &__schedule {
+      grid-column: 1;
+      grid-row: 2;
+      max-width: 130px;
+    }
+
+    &__logo {
+      grid-column-start: 1;
+      grid-row-start: 1;
+    }
+
+    &__arrow-up {
+      display: block;
+      justify-self: end;
+      grid-column: 1 / 3;
+      grid-row: 3;
+    }
+  
+    &__media {
+      grid-column-start: 2;
+      grid-row-start: 1;
+      align-self: center;
+      justify-self: end;
+    }
+
+    &__copyright {
+      grid-column: 1 / 3;
+      grid-row-start: 5;
+      justify-self: center;
     }
   }
 }
