--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -112,7 +112,6 @@
     grid-template-columns: 230px minmax(320px, 505px);
     grid-template-rows: 100px 284px;
     height: 384px;
-    // margin: 0 auto 90px;
     padding: 0;
 
     &__events {
@@ -158,6 +157,63 @@
   
       & img {
         object-fit: cover;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    max-width: 320px;
+    height: 500px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80px 420px;
+    margin: 0 auto 90px;
+
+    &__logo {
+      grid-column: 1;
+      grid-row: 1;
+      align-self: center;
+      justify-self: center;
+      z-index: 1;
+    }
+    
+    &__image {
+      grid-column: 1;
+      grid-row: 1 / 2;
+      justify-self: center;
+      height: 300px;
+    }
+
+    &__container {
+      grid-column: 1;
+      grid-row: 1 / 2;
+      display: grid;
+      grid-template: 80px 220px 130px 70px / 1fr 1fr;
+      gap: 0 20px;
+    }
+
+    &__name {
+      grid-column: 1 / 3;
+      grid-row: 3;
+      text-align: center;
+    }
+
+    &__tickets {
+      grid-column: 1 / 3;
+      grid-row: 4;
+      height: 50px;
+      width: 230px;
+      line-height: 50px;
+      justify-self: center;
+      margin-left: -50px;
+
+      &::after {
+        content: "";
+        top: -1px;
+        right: -50px;
+        height: 50px;
+        width: 50px;
       }
     }
   }
