--- a/src/styles/main-event.scss
+++ b/src/styles/main-event.scss
@@ -49,3 +49,31 @@
     }
   }
 }
+
+@media screen and (max-width: 600px) {
+  .main-event {
+    grid-template-rows: auto 77px;
+
+    &__description {
+      align-self: end;
+      width: 278px;
+      height: 154px;
+      padding: 25px 20px 30px;
+      background-color: #fff;
+      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+  
+      &-type {
+        font-size: 16px;
+      }
+  
+      &-date {
+        font-size: 16px;
+      }
+  
+      &-name {
+        font-size: 28px;
+        padding-top: 15px;
+      }
+    }
+  }
+}
