--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -47,6 +47,18 @@
     font-weight: normal;
     font-size: 36px;
     margin-bottom: 15px;
+
+    &--decoration-right {
+
+      &::after {
+        content: "";
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        background-color: #f14a27;
+        margin: 0 0 3px 10px;
+      }
+    }
   }
 
   &__text {
@@ -151,6 +163,14 @@
       &--fon {
         font-size: 28px;
         text-align: center;
+      }
+
+      &--decoration-right {
+
+        &::after {
+          width: 10px;
+          height: 10px;
+        }
       }
     }
   }
