--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -66,15 +66,19 @@
   }
 
   &__button {
+    display: block;
+    position: relative;
     width: 150px;
     height: 70px;
     border: 2px solid #1a5a4c;
-    font-size: 16px;
+
     font-family: "IBM Plex Sans", sans-serif;
+    font-size: 16px;
     font-weight: 500;
-    outline: none;
-    position: relative;
-    cursor: pointer;
+    text-align: center;
+    line-height: 64px;
+    text-decoration: none;
+    color: #0f0e08;
 
     transition-duration: 0.4s;
 
@@ -275,6 +279,7 @@
     &__button {
       margin-top: 20px;
       height: 50px;
+      line-height: 46px;
       width: calc(100% - 70px);
 
       &::after {
