--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -41,6 +41,7 @@
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
     position: relative;
+    cursor: pointer;
   }
 
   &__button {
@@ -50,6 +51,7 @@
     margin-left: 30px;
     border: none;
     outline: none;
+    cursor: pointer;
     background-image: url("../images/right.svg");
     background-position: center;
     background-repeat: no-repeat;
