--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -14,6 +14,7 @@
     @media (max-width: 560px) {
       margin-left: 0;
       text-align: center;
+      font-size: 40px;
     }
   }
 
@@ -38,13 +39,20 @@
     max-width: $column * 7;
     margin-right: $gridGap;
     margin-bottom: $gridGap;
+
+    @media (max-width: 520px) {
+      flex-direction: column;
+      margin-right: 0;
+    }
   }
 
   &__date {
     padding-right: $gridGap;
     width: $column * 2;
-    @media (max-width: 560px) {
-      //width: auto;
+    @media (max-width: 520px) {
+      display: flex;
+      gap: 20px;
+      align-items: baseline;
     }
 
   }
