--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -4,6 +4,10 @@
   padding: 80px 0;
   position: relative;
 
+  @media (max-width: 480px) {
+    padding-top: 40px;
+  }
+
   &__title {
     @include title(48px, 58px, $colorBlack);
     margin-left: $column * 3;
@@ -50,17 +54,8 @@
     height: auto;
   }
 
-  //&__image-wrap--odd {
-  //  margin-left: -($gridGap*2);
-  //}
-  //
-  //&__image-wrap--even {
-  //  margin-right: -($gridGap*2);
-  //}
-
   &__card {
     width: $column * 5;
-    //padding: 0 20px;
   }
 
   &__date-limited {
@@ -69,6 +64,11 @@
     margin-bottom: 20px;
     @media (max-width: 970px) {
       margin: 0;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 40px;
+      line-height: 58px;
     }
 
   }
