--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -37,8 +37,20 @@
 
   &__sm {
     display: flex;
-    gap: 0 30px;
+    gap: 0 20px;
     padding-top: 36px;
+  }
+
+  &__media-link {
+    display: inline-block;
+    text-align: center;
+    width: 36px;
+    //line-height: 30px;
+    transition: all 0.5s ease;
+  }
+
+  &__media-link:hover {
+    transform: scale(1.2);
   }
 
   &__weekday {
