--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,7 @@ body {
   color: $colorLightGray;
   position: relative;
   transition: all 0.5s ease;
+  cursor: pointer;
 
   @media (max-width: 970px) {
     margin-top: 40px;
@@ -45,7 +46,8 @@ body {
 }
 
 .button:hover {
-  transform: scale(1.05);
+  transform: translateY(-10px);
+  box-shadow: 0 8px 10px rgba(0,0,0,0.3);
 }
 
 .button--inactive {
@@ -58,6 +60,11 @@ body {
   position: relative;
   padding-right: 200px;
 
+  @media (max-width: 970px) {
+    padding: 0;
+    text-align: center;
+  }
+
   &::after {
     content: "";
     display: inline-block;
@@ -67,6 +74,13 @@ body {
     width: 70px;
     height: 1px;
     background-color: $colorBlack;
+
+    @media (max-width: 970px) {
+      right: 0;
+      left: calc(50% - 35px);
+      top: 150%;
+    }
+
   }
 
   &-link {
