--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -6,6 +6,7 @@
     background-color: $colorMainGreen;
     height: 20px;
     width: 25px;
+    padding: 20px;
     margin-right: 40px;
     cursor: pointer;
   }
@@ -44,100 +45,5 @@
   &__toggler--active > &__toggler::after {
     top: 0;
     transform: rotate(90deg);
-  }
-
-  &__content {
-    opacity: 0;
-    height: 720px;
-    position: absolute;
-    top: 80px;
-    width: 100%;
-    //transition: all 0.3s;
-    z-index: 5;
-    background: $colorMainGreen url("../images/header-pic2.png") no-repeat 100% 100%;
-
-    @media (max-width: 1100px) {
-      background: $colorMainGreen;
-    }
-    @media (max-width: 729px) {
-      height: 540px;
-    }
-    @media (max-width: 460px) {
-      height: 500px;
-
-    }
-  }
-
-  &__content--open {
-    opacity: 1;
-    right: 0;
-    transition: all 0.5s;
-  }
-
-  &__list::after {
-    display: block;
-    content: "";
-    height: 1px;
-    max-width: $column * 6 - $gridGap;
-    background-color: $colorLightGray;
-    opacity: 0.3;
-  }
-
-  &__item {
-    margin-bottom: 60px;
-    @media (max-width: 729px) {
-      margin-bottom: 30px;
-    }
-
-    @media (max-width: 420px) {
-      margin-bottom: 20px;
-    }
-  }
-
-  &__link {
-    @include title(48px, 58px, $colorLightGray);
-
-    @media (max-width: 490px) {
-      font-size: 40px;
-      line-height: 40px;
-    }
-
-    @media (max-width: 420px) {
-      font-size: 32px;
-      line-height: 32px;
-    }
-  }
-
-  &__buttons {
-    display: flex;
-    gap: $gridGap;
-
-    @media (max-width: 420px) {
-      flex-direction: column;
-      align-items: center;
-      margin-top: 10px;
-    }
-  }
-
-}
-
-.about {
-  display: flex;
-  margin-bottom: 80px;
-  @media (max-width: 729px) {
-    margin-bottom: 40px;
-  }
-
-  @media (max-width: 480px) {
-    flex-direction: column;
-  }
-
-  &__item {
-    min-width: $column * 2;
-    @include smallText($colorLightGray);
-  }
-
-  &__title {
-    opacity: 0.7;
   }
 }
