--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -1,7 +1,11 @@
 @import "utils";
 
 .news {
-  padding: 120px 0 100px;
+  padding: 100px 0;
+
+  @media (max-width: 720px) {
+    padding: 80px 0;
+  }
 
   @media (max-width: 460px) {
     padding: 60px 0;
