--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -22,7 +22,6 @@
 
   &__menu {
     display: flex;
-
   }
 
   &__language-switcher {
@@ -132,4 +131,117 @@
     bottom: 50%;
     left: 115%;
   }
+}
+
+.about {
+  display: flex;
+  margin-bottom: 80px;
+  @media (max-width: 729px) {
+    margin-bottom: 40px;
+  }
+
+  @media (max-width: 480px) {
+    flex-direction: column;
+  }
+
+  &__item {
+    min-width: $column * 2;
+    @include smallText($colorLightGray);
+  }
+
+  &__title {
+    opacity: 0.7;
+  }
+}
+
+.slider {
+  position: absolute;
+  opacity: 0;
+  transition: all 0.7s;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    gap: 0 60px;
+    max-width: 1280px;
+    height: 720px;
+    background: $colorMainGreen;
+
+    @media (max-width: 1100px) {
+      background: $colorMainGreen;
+    }
+    @media (max-width: 729px) {
+      height: 540px;
+    }
+    @media (max-width: 460px) {
+      height: 500px;
+
+    }
+  }
+
+  &__list::after {
+    display: block;
+    content: "";
+    height: 1px;
+    max-width: $column * 6 - $gridGap;
+    background-color: $colorLightGray;
+    opacity: 0.7;
+  }
+
+  &__item {
+    margin-bottom: 60px;
+    @media (max-width: 729px) {
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: 420px) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__link {
+    @include title(48px, 58px, $colorLightGray);
+
+    @media (max-width: 490px) {
+      font-size: 40px;
+      line-height: 40px;
+    }
+
+    @media (max-width: 420px) {
+      font-size: 30px;
+      line-height: 30px;
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    gap: $gridGap;
+
+    @media (max-width: 420px) {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px;
+    }
+  }
+
+  &__image-wrap {
+    align-self: flex-end;
+    max-width: 55%;
+
+    @media (max-width: 939px) {
+      display: none;
+    }
+  }
+
+  &__image {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
+
+.slider--open {
+  opacity: 1;
+  transition: all 0.5s;
+  z-index: 5;
 }
