Fixed animstion and added transform: scale in nav

--- a/src/styles/footer/contacts.scss
+++ b/src/styles/footer/contacts.scss
@@ -12,6 +12,12 @@
   }
 }
 
+.contacts__address-1:hover,
+.contacts__address-2:hover,
+.contacts__address-3:hover {
+  border: 1px solid #1a5a4c;
+}
+
 @include onMobileMax {
   .contacts {
     margin-left: 0;
