--- a/src/styles/footer/nav.scss
+++ b/src/styles/footer/nav.scss
@@ -1,10 +1,18 @@
 .nav {
   &__item-footer {
     margin-bottom: 20px;
+    transition: 0.5s;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__item-footer--second {
     margin-left: 200px;
+    transition: 0.5s;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
 
