--- a/src/styles/header/nav.scss
+++ b/src/styles/header/nav.scss
@@ -8,6 +8,10 @@
 
   &__item {
     margin-bottom: 20px;
+
+    &:hover {
+      transform: scale(1.2) translate(20px);
+    }
   }
 
   &__link {
@@ -15,9 +19,5 @@
     font-size: 18px;
     width: 100%;
     padding: 10px;
-
-    &:hover {
-      font-size: 24px;
-    }
   }
 }
