--- a/src/styles/header/right.scss
+++ b/src/styles/header/right.scss
@@ -6,6 +6,7 @@
   &__namu {
     position: absolute;
     left: 250px;
+    font-weight: bold;
     transition: 1s;
   }
 
@@ -23,10 +24,6 @@
     -webkit-text-stroke: 2px #000;
     color: transparent;
     transition: 0.5s;
-
-    &:hover {
-      color: black;
-    }
   }
 
   &__photo {
