--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,10 +1,10 @@
 .header {
   position: relative;
   display: flex;
-  width: 96vw;
+  width: 100%;
   height: 655px;
 
-  margin-left: 55px;
+  padding-left: 55px;
   &__nav {
     position: absolute;
     height: 500px;
@@ -27,7 +27,7 @@
 @include onMobileMax {
   .header {
     height: 350px;
-    margin-left: 0;
+    padding-left: 0;
   }
 }
 
