--- a/src/styles/header/left.scss
+++ b/src/styles/header/left.scss
@@ -2,6 +2,7 @@
 
 .left {
   position: relative;
+  left: -30px;
   display: flex;
   flex-direction: column;
   width: 40%;
@@ -12,7 +13,7 @@
   &__text {
     position: absolute;
     top: 550px;
-    left: 0;
+    left: 20px;
     width: 10px;
     &__paragraph {
       transform: rotate(-90deg);
@@ -39,10 +40,6 @@
       color: #000;
       line-height: 100%;
       transition: 0.5s;
-      &:hover {
-        -webkit-text-stroke: 2px #000;
-        color: transparent;
-      }
     }
   }
 
