--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -96,7 +96,7 @@ html {
 .left__text:hover {
   animation-name: down-up;
   animation-duration: 1s;
-  animation-iteration-count: infinite;
+  animation-iteration-count: 5.5;
   animation-direction: alternate;
   animation-timing-function: linear;
 }
