--- a/src/styles/section/text.scss
+++ b/src/styles/section/text.scss
@@ -10,6 +10,7 @@
     font-size: 48px;
     line-height: 100%;
     transition: 1s;
+    width: 50%;
 
     &:hover {
       transform: translate(7%);
