--- a/src/styles/utils/animation/animation.scss
+++ b/src/styles/utils/animation/animation.scss
@@ -97,14 +97,13 @@
 
 @keyframes icons-rotate {
   0% {
-    transform: rotate(45deg);
+    transform: rotate(0) scale(1.2);
   }
   50% {
-    transform: rotate(0);
+    transform: rotate(45deg) scale(1.2);
   }
-
   100% {
-    transform: rotate(-45deg);
+    transform: rotate(-45deg) scale(1.2);
   }
 }
 
