--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -4,4 +4,10 @@
   line-height: 100%;
   font-weight: bold;
   text-align: start;
+  cursor: default;
+  transition: all 1s;
+
+  &:hover {
+    color: #1a5a4c;
+  }
 }
