--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   height: 550px;
   max-width: 1920px;
+  margin: 0 auto;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
     url(../images/subs.png)
     center / 175%
@@ -38,6 +39,11 @@
     background-color: #fff;
     font-family: "Montserrat", sans-serif;
     color: #687480;
+    transition: box-shadow 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 10px #fff;
+    }
   }
 
   &__button {
@@ -46,6 +52,10 @@
     background: url(../images/black_arrow.svg) no-repeat center;
     background-color: #f14a27;
     cursor: pointer;
+
+    &:hover {
+      @include hover(background-color, #ff2a00);
+    }
   }
 }
 
