--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,4 +1,5 @@
 @import "utils/vars";
 @import "utils/mixins";
 @import "utils/extends";
-@import "utils/reset.scss";
+@import "utils/reset";
+@import "utils/animations";
