--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -23,6 +23,10 @@
   &__media {
     grid-column-start: 1;
     grid-row-start: 3;
+
+    & img:hover {
+      animation: shake 0.5s 3;
+    }
   }
 
   &__copyright {
@@ -51,11 +55,20 @@
   }
 
   &__contacts {
-    grid-column: 6 / 8;
+    grid-column: 6 / 9;
     grid-row-start: 2;
 
     &-title {
       margin-bottom: 20px;
+    }
+
+    &-details a {
+      color: #0f0e08;
+      transition: all 0.3s;
+
+      &:hover {
+        @include hover(color, #f14a27);
+      }
     }
   }
 
@@ -69,6 +82,10 @@
     
     &-link {
       color: #0f0e08;
+
+      &:hover {
+        @include hover(color, #1a5a4c);
+      }
     }
   }
 
@@ -82,6 +99,10 @@
 
     &-link {
       color: #0f0e08;
+
+      &:hover {
+        @include hover(color, #1a5a4c);
+      }
     }
   }
 }
