Fixed problem in title header

--- a/src/styles/header/left.scss
+++ b/src/styles/header/left.scss
@@ -79,6 +79,7 @@
 @include onIpadMini {
   .left {
     width: 28%;
+    left: -37px;
     .left__text {
       display: none;
     }
@@ -94,6 +95,34 @@
 
     &__button {
       width: 200px;
+    }
+  }
+}
+
+@include forHeader {
+  .left {
+    left: 28px;
+    .left__center {
+      top: 153px;
+      width: 208px;
+
+      &__title {
+        font-size: 34px;
+      }
+    }
+
+    &__button {
+      height: 50px;
+      width: 120px;
+      font-size: 14px;
+      line-height: 50px;
+      padding-left: 10px;
+      &__click {
+        height: 50px;
+        width: 40px;
+
+        background-color: #1a5a4c;
+      }
     }
   }
 }
