--- a/src/styles/header/right.scss
+++ b/src/styles/header/right.scss
@@ -60,6 +60,24 @@
   }
 }
 
+@include forHeader {
+  .right {
+    width: 72%;
+
+    &__namu {
+      left: 87px;
+    }
+
+    &__span {
+      top: 145px;
+      font-size: 34px;
+    }
+    &__photo {
+      height: 384px;
+    }
+  }
+}
+
 @include onMobileMax {
   .right {
     width: 100%;
