footer block done

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -26,4 +26,10 @@ a {
   text-decoration: none;
   outline: none;
   transition-duration: $transDuration;
+
+  padding: 0;
+}
+
+li {
+  list-style: none;
 }
