--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "lecture";
 @import "gallery";
 @import "support";
+@import "footer";
 
 .body {
 
@@ -33,9 +34,13 @@
   }
 
   &__footer {
-    margin: 0 auto;
-    padding: 0 $pagePadd;
+    margin: 0 auto 35px;
+    padding: 50px $pagePadd*3 30px;
     max-width: $pageWidth + $pagePadd *2;
+
+    @media (max-width: 480px) {
+      padding: 50px $pagePadd 30px;
+    }
   }
 }
 
