--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -17,6 +17,9 @@
     font-weight: 700;
     transform: rotate(-90deg);
     color: $c-lightGreyText;
+    // &:hover {
+    //   top: 130px;
+    // }
 
     &::before {
       display: inline-block;
@@ -72,6 +75,8 @@
     object-fit: cover;
     width: 55%;
     height: 520px;
+
+    @include hoverPicture;
 
     @include MediumScreen {
       width: 100%;
