--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -5,7 +5,6 @@
 
   @include MobileScreen {
     padding-top: 273px;
-    
   }
 
   &__title {
@@ -41,7 +40,8 @@
 
   &__picture {
     position: relative;
-    transition-duration: 0.7s;
+
+    @include hoverPicture($scale: scale(0.9));
 
     @include MediumScreen {
       height: 543px;
@@ -69,6 +69,7 @@
 
   &__picture--3 {
     grid-column: 4;
+
     @media screen and (max-width: 1680px) {
       display: none;
     }
@@ -89,6 +90,7 @@
 
   &__picture--6 {
     grid-column: 4;
+    
     @media screen and (max-width: 1680px) {
       display: none;
     }
