--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -13,6 +13,10 @@
     background-size: cover;
     background-position: center;
     height: 35vw;
+    
+    &:hover {
+      box-shadow: inset 1px 1px 10px grey;
+    }
 
     @media screen and (min-width: 1920px) {
       height: 674px;
@@ -54,6 +58,10 @@
       right: calc(50% - #{$lectureCardWidthMob} / 2);
       bottom: -97px;
     }
+  }
+
+  &__background:hover .lecture__item {
+    box-shadow: 1px 1px 5px rgba(26, 90, 76, 0.25);
   }
 
   &__head {
