--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,6 +8,7 @@ $c-lightGreyText: #687480;
 $c-textDate: #1a5a4c;
 $c-squareEvets: #f14a27;
 $c-noActive: #e0e0e0;
+$shadow-field: inset 1px 1px 15px 1px $c-textDate;
 
 $maxPageWidth: 1920px;
 $maxWitdhPageCont: 1570px;
