--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,31 +3,6 @@
   max-width: $maxWitdhPageCont;
   margin: 0 auto;
 
-  &__btn {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    top: 39px;
-    left: 0;
-    cursor: pointer;
-    z-index: 2;
-
-    @media screen and (max-width: 1680px) {
-      left: 55px;
-    }
-
-    @include MediumScreen {
-      left: 34px;
-    }
-
-    @include MobileScreen {
-      left: 20px;
-    }
-    
-  }
-
   &__btn-item {
     display: block;
     position: absolute;
@@ -48,8 +23,46 @@
     }
   }
 
+  &__btn {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 39px;
+    left: 0;
+    cursor: pointer;
+    z-index: 2;
+    transition: background-color 0.3s, transform 0.3s;
+
+    &:hover {
+      transform: scale(1.3);
+    }
+    
+    &:hover > .header__btn-item {
+      background-color: $c-textDate;
+    }
+
+    @media screen and (max-width: 1680px) {
+      left: 55px;
+    }
+
+    @include MediumScreen {
+      left: 34px;
+    }
+
+    @include MobileScreen {
+      left: 20px;
+    }
+  }
+
   &__toggler {
     display: none;
+
+    &:checked ~ .header__btn:hover {
+      transform: scale(1.3);
+    }
+
     &:checked ~ .header__btn > .header__btn-item {
       transform: rotate(45deg);
     }
