--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -16,6 +16,11 @@
     top: 15px;
     right: calc(50% - #{$logoWidth} / 2);
     z-index: 1;
+    transition-duration: 0.7s;
+
+    &:hover {
+      transform: scale(-1.2, 1.2);
+    }
 
     @include MobileScreen {
       right: calc(80% - #{$logoWidth} / 2);
@@ -32,5 +37,7 @@
 
   &__search {
     font-size: 19px;
+
+    @include hoverLinkText($c-squareEvets, scale(1.3));
   }
 }
