--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -7,6 +7,7 @@
     font-size: 14px;
     line-height: 14px;
     white-space: nowrap;
+    
 
     @include MediumScreen {
       gap: 30px;
@@ -19,8 +20,7 @@
     }
   }
 
-  // &__item{
-  // }
-  // &__link{
-  // }
+  &__item {
+    @include hoverLinkText;
+  }
 }
