--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,7 +1,39 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+@mixin hoverLinkText($_toValue: $c-textDate, $_toValue2: scale(1.1)) {
+  transition: color 0.3s, transform 0.3s;
   &:hover {
-    #{$_property}: $_toValue;
+    color: $_toValue;
+    transform: $_toValue2;
+  }
+}
+
+@mixin hoverIconText($_toValue: $c-textDate, $_toValue2: scale(1.2)) {
+  transition: background-color 0.3s, transform 0.3s;
+  &:hover {
+    background-color: $_toValue;
+    transform: $_toValue2;
+  }
+}
+
+@mixin hoverPicture($scale: scale(1.05), $tran:translateY(-10px)) {
+  transition: transform 0.5s, box-shadow 0.5s, left 0.7s;
+  &:hover {
+    transform: $scale $tran;
+    box-shadow: 1px 1px 10px 5px grey;
+  }
+}
+
+@mixin hoverButton($_toValue: brightness(120%)) {
+  transition: filter 0.3s, border-radius 0.3s;
+  &:hover {
+    filter: $_toValue;
+    border-radius: 0 20px 20px 0 ;
+  }
+}
+
+@mixin hoverLogo($transf: scale(1.3)) {
+  transition: transform 0.3s;
+  &:hover {
+    transform: $transf;
   }
 }
 
