--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -119,6 +119,7 @@
     display: block;
     background-repeat: no-repeat;
     height: 50px;
+    width: 50px;
     transform: translate(230px, 46px);
 
     @media (min-width: 768px) {
