--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -30,24 +30,17 @@
     display: none;
     margin-bottom: 30px;
 
-    &:nth-child(1) {
-      display: block;
-
-      @media (min-width: 1280px) {
-        grid-area: first;
-      }
-    }
-
+    &:nth-child(1),
     &:nth-child(2) {
       display: block;
-      @media (min-width: 1280px) {
-        display: none;
-      }
-
     }
 
     @media (min-width: 768px) {
       height: 543px;
+
+      // &:nth-child(2) {
+      //   display: block;
+      // }
 
       &:nth-child(3) {
         display: block;
@@ -57,6 +50,14 @@
     @media (min-width: 1280px) {
       height: 600px;
       width: 100%;
+
+      &:nth-child(1) {
+        grid-area: first;
+      }
+
+      &:nth-child(2) {
+        display: none;
+      }
 
       &:nth-child(3) {
         grid-area: second;
