--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @import "fonts";
 @import "typography";
 @import "reset";
+@import "header";
+@import "toggler";
+@import "nav";
 @import "title";
 @import "events";
 @import "exhibition";
