fixed nav, design

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -106,7 +106,7 @@
     width: 9px;
     height: 9px;
     border-radius: 50%;
-    background-color: $grey;
+    background-color: $lightGrey;
 
     &-active {
       background-color: $mainGreen;
