--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,6 +5,14 @@
   &__logo {
     @include logo;
     order: 2;
+
+    @media (max-width: 928px) {
+      font-size: 24px;
+    }
+
+    @media (max-width: 640px) {
+      text-align: center;
+    }
   }
 
   &__search {
@@ -14,45 +22,52 @@
     transition-duration: $transDuration;
   }
 
-  &__searc {
-    width: 50px;
-    height: 72px;
-  }
-
   &__list {
-    display: none;
-    max-width: 1470px;
+    width: 100%;
 
-    border-top-right-radius: 40%;
-    border-bottom-right-radius: 50%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    z-index: 1;
 
-    @media (max-width: 1440px) {
-      border-top-right-radius: 0;
+    transition-duration: $transDuration;
+
+    background-color: #fff;
+    order: 2;
+
+    @media (max-width: 1200px) {
+      opacity: 0;
     }
   }
 
   &__link {
     display: block;
-    padding: 15px;
+    margin: 0 10px;
 
     @include mainText;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 18px;
     line-height: 72px;
     color: $dark;
 
     text-align: center;
+
+    @media (max-width: 928px) {
+      font-size: 14px;
+      line-height: 48px;
+    }
   }
 
   &__toggler {
     display: none;
+    position: absolute;
   }
 
   &__toggler-label {
     order: 1;
 
-    display: block;
+    display: none;
     position: relative;
     margin: auto 0 auto -15px;
     padding: 15px;
@@ -60,6 +75,15 @@
     height: 13px + 30px;
 
     cursor: pointer;
+
+    @media (max-width: 1200px) {
+      display: block;
+    }
+
+    @media (max-width: 640px) {
+      z-index: 2;
+      margin: 0;
+    }
   }
 
   &__span,
@@ -102,20 +126,13 @@
   &__toggler:checked {
 
     & ~ .nav__list {
-      display: flex;
-      flex-wrap: wrap;
-      z-index: 1;
+      opacity: 1;
+      justify-content: center;
 
-      transition-duration: $transDuration;
-
-      position: absolute;
-      top: 0;
-      left: 100px;
-      background-color: #fff;
-      order: 2;
-
-      @media (max-width: 768px) {
-        left: 50px;
+      @media (max-width: 640px) {
+        height: 505px;
+        flex-direction: column;
+        margin-left: -50px;
       }
     }
   }
