--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -23,10 +23,9 @@
 }
 
 @mixin hoverButton($_toValue: brightness(120%)) {
-  transition: filter 0.3s, border-radius 0.3s;
+  transition: filter 0.3s;
   &:hover {
     filter: $_toValue;
-    border-radius: 0 20px 20px 0 ;
   }
 }
 
