--- a/src/styles/header/nav.scss
+++ b/src/styles/header/nav.scss
@@ -1,6 +1,7 @@
 .header {
   &__menu {
     position: absolute;
+    z-index: 1;
     @media screen and (min-width: 768px) {
       height: auto;
       top: 0;
@@ -10,6 +11,13 @@
       display: block;
       position: absolute;
     }
+  }
+
+  &__menu-item {
+    display: block;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(#fff, 0.08);
   }
 
   &__menu-list {
@@ -27,11 +35,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    background-color: rgba(#fff, 0.85);
+    background-color: rgba(#fff, 0.92);
   }
 
   &__menu-link {
     font-size: 4.37vw;
+    padding: 5px auto;
+    background-color: rgba(#fff, 0.13);
 
     color: #000;
 
